--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- 表白内容容器 -->
     <div class="container" id="confessionContainer" style="display: none;">
         <img id="mainImage" src="assets/images/heart.png" alt="爱心">
-        <h1 id="question">可以成为我的恋人吗？</h1>
+        <h1 id="question">石如玉你可以成为我的恋人吗？</h1>
         <div class="buttons">
             <button id="yes">可以</button>
             <button id="no">不要</button>
