--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
     <div id="nameInputContainer" style="display: none;">
         <div id="sidehead-wrapper">
              <!-- 新增可点击链接元素 -->
-             <a href="https://www.xiaohongshu.com/user/profile/5d47ef8e000000001203de79" id="xiaohongshuLink" target="_blank">小红书(*^▽^*)</a>
-             <a href="https://www.douyin.com/user/MS4wLjABAAAAe0T2npKNPtRfu3yLhwnCWtJU5Agwb6WY9g_2mnqKfZM" id="douyinLink" target="_blank">抖音( •̀ ω •́ )</a>
-             <a href="https://github.com/JayMuShui/tang-love" id="repoLink" target="_blank">源代码仓库ˋ( ° ▽、° )</a>
             <img id="sidehead" src="assets/images/sidehead.png" alt="侧头">           
         </div>
-        <h1>你希望我怎么称呼你呢？<span style="font-size: 2vw;">(*>﹏<*)′</span></h1>
-        <p style="font-size: 2vw;">不想告诉我的话也可以留空哦</p>
-        <input type="text" id="usernameInput" placeholder="请输入你的名字">
+        <h1>你希望我称呼你石如玉还是其他昵称呢？<span style="font-size: 2vw;">(*>﹏<*)′</span></h1>
+        <input type="text" id="usernameInput" placeholder="石如玉">
         <button id="confirmNameButton">是这个名字呢</button>
     </div>
     <!-- 表白内容容器 -->
